--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "email-mock"
+name = "smtpbz-mock"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.203", features = ["derive"] }
+serde = { version = "1.0.204", features = ["derive"] }
 axum = { version = "0.7.5", features = ["macros"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = [
@@ -15,7 +15,7 @@ tracing-subscriber = { version = "0.3.18", features = [
   "env-filter",
 ] }
 tower-http = { version = "0.5.2", features = ["cors"] }
-tokio = { version = "1.38.0", features = [
+tokio = { version = "1.38.1", features = [
   "macros",
   "rt-multi-thread",
   "signal",
